--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                 queueBase.position.set(25, 0, 0);
                 queueBase.receiveShadow = true;
                 this.engine.scene.add(queueBase);
-                this.addLabel("INÍCIO", 5, 0, 6);
+                this.addLabel("INICIO", 5, 0, 6);
                 this.addLabel("FIM", 45, 0, 6);
 
                 this.setMode('STACK');
