--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
     <div id="ui-layer">
         <div class="scene-selector">
-            <button id="btn-stack" class="scene-btn active stack" onclick="window.app.setMode('STACK')">🏗️ PILHA (LIFO)</button>
-            <button id="btn-queue" class="scene-btn" onclick="window.app.setMode('QUEUE')">🚇 FILA (FIFO)</button>
+            <button id="btn-stack" class="scene-btn active stack" onclick="window.app.setMode('STACK')">PILHA (LIFO)</button>
+            <button id="btn-queue" class="scene-btn" onclick="window.app.setMode('QUEUE')">FILA (FIFO)</button>
         </div>
 
         <div id="notification-area"></div>
